# taskman

./: Cargo.toml  README.md  main.sh
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.module.css  App.tsx  dateUtils.ts  index.css  index.tsx  interfaces.ts
frontend/src/components/: editableTaskTitle.tsx  habit.tsx  habitTracker.tsx  main.tsx  navbar.tsx  task.tsx  tasklist.tsx  timer.tsx
frontend/src/styles/: editableTaskTitle.module.css  main.module.css  navbar.module.css  task.module.css  tasklist.module.css  timer.module.css
src/: database.rs  lib.rs  main.rs
