[package]
name = "taskman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.54"
warp = "0.3.2"
serde_json = "1.0"
rand = "0.8.5"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.tokio]
version = "1.16.1"
features = ["full"]

[dependencies.tokio-postgres]
version = "0.7.5"
features = ["with-chrono-0_4", "with-serde_json-1"]

[dependencies.serde]
version = "*"
features = ["derive"]
